# VitalMesh

./: .gitignore  .gitmodules  README.md  registry.toml  start.sh  start_wsl.sh
agents/Coral-MedicalOfficeTriage-Agent/: .env.example  Dockerfile  README.md  coral-agent.toml  pyproject.toml
agents/Coral-MedicalOfficeTriage-Agent/.github/workflows/: docker-image.yml
agents/Coral-VoiceInterface-Agent/: .env.example  main.py
agents/chatbot_agent/: coral-agent.toml  main.py  run.sh
agents/ehr_agent/: coral-agent.toml  main.py  run.sh
agents/ehr_agent/ehr_outputs/: 001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  017.yaml  018.yaml  019.yaml  020.yaml  021.yaml  022.yaml  023.yaml  024.yaml  anush_comprehensive_ehr.yaml  anush_tup_comprehensive_ehr.yaml  anushtup_comprehensive_ehr.yaml  processed_mapping.yaml  unknown_patient_20250920_133444_comprehensive_ehr.yaml  unknown_patient_20250920_141442_comprehensive_ehr.yaml  unknown_patient_20250920_143518_comprehensive_ehr.yaml  unknown_patient_20250920_143946_comprehensive_ehr.yaml  unknown_patient_20250921_114500_comprehensive_ehr.yaml  unknown_patient_20250921_114727_comprehensive_ehr.yaml
agents/medical_agent/: .env.example  README.md  medical_agent.py  output.txt  requirements.txt  run.sh  setup.py  utils.py
agents/medical_agent/patient_notes/: anush.yaml  (+16 more)
backend/: requirements.txt
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  router.jsx
(+21 files in other folders)
